Correct spacing values and choice properties
Remove line-height, switch to flex for text-alignment in header and footer

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -12,7 +12,8 @@ body {
   color: white;
   font-size: 32px;
   font-weight: 900;
-  line-height: 2;
+  display: flex;
+  align-items: center;
   padding-left: 16px;
 }
 
@@ -25,8 +26,9 @@ body {
   height: 72px;
   background: #eee;
   color: darkmagenta;
-  text-align: center;
-  line-height: 4.5;
+  display: flex;
+  align-items: center;
+  justify-self: center;
 }
 
 .sidebar {
@@ -43,6 +45,10 @@ body {
   margin: 0;
 }
 
+.sidebar li {
+  margin-bottom: 16px;
+}
+
 .sidebar a {
   font-size: 24px;
   color: white;
@@ -51,7 +57,6 @@ body {
 
 .cards {
   padding: 32px;
-  gap: 32px;
   display: flex;
   flex-wrap: wrap;
 }
@@ -60,5 +65,7 @@ body {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  padding: 16px;
+  margin: 16px;
   width: 300px;
 }
